[package]
name = "madproxy"
version = "0.1.0"
authors = ["nyxalis. <thayaganthusiyanthan@gmail.com>"]
edition = "2021"

[dependencies]
proxy-protocol = "0.5.0"
toml = "0.8.19"
tokio = { version = "1.42.0", features = ["full"] }
log = "0.4"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1.0"
derive_more = "0.99"
serde_json = "1.0.134"
reqwest = { version = "0.12.9", features = ["json"] }
image = "0.25"
base64 = "0.21"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
